[gd_scene load_steps=5 format=3 uid="uid://c3larsht776ky"]

[ext_resource type="Script" path="res://game/scenes/defence/defence.gd" id="1_qvq1s"]
[ext_resource type="PackedScene" uid="uid://brka2gx5mpoju" path="res://game/scenes/defence/ui/ui.tscn" id="2_vg15m"]
[ext_resource type="Script" path="res://game/scenes/defence/objects_manager.gd" id="4_c1uqm"]

[sub_resource type="Environment" id="Environment_oyx3i"]
background_mode = 3
glow_enabled = true

[node name="DefenceScreen" type="Node2D"]
script = ExtResource("1_qvq1s")

[node name="ObjectsManager" type="Node2D" parent="."]
script = ExtResource("4_c1uqm")

[node name="UI" parent="." instance=ExtResource("2_vg15m")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_oyx3i")

[connection signal="tower_builded" from="UI" to="." method="_on_ui_tower_builded"]
[connection signal="tower_distroed" from="UI" to="." method="_on_ui_tower_distroed"]
